Fix `top-nav-bar` where items overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     overflow-y: hidden;
     white-space: nowrap;
     scrollbar-width: none;
+    user-select: none;
 }
 #top-nav-bar #title {
     font-weight: bold;
